--- a/GCR.Web/Content/_base.css
+++ b/GCR.Web/Content/_base.css
@@ -1,4 +1,4 @@
-/*#source /Content/base.css */
+﻿/*#source /Content/base.css */
 /*! -----------------------------------------------------------------------
  Blueprint CSS Framework 1.0.1
  http://blueprintcss.org
@@ -394,7 +394,7 @@
   input[type=password]:focus,
   input[type=url]:focus,
   input[type=email]:focus,
-  textarea:focus {
+  textarea[name]:focus {
     border-color: #888;
     background-color: #e8f5ff;
   }
@@ -421,6 +421,9 @@
   }
   .button:hover {
     color: #fafafa;
+  }
+  a.ui-button {
+    padding: 0.1em;
   }
   textarea {
     width: 390px;
@@ -1024,7 +1027,8 @@ img.photo {
   display: none;
 }
 input.input-validation-error,
-select.input-validation-error {
+select.input-validation-error,
+textarea.input-validation-error {
   border-color: #f58282;
   border-top-color: #ed2424;
   border-left-color: #ed2424;
@@ -1036,6 +1040,21 @@ select.input-validation-error {
 }
 .validation-summary-valid {
   display: none;
+}
+div.char-counter {
+  position: relative;
+  padding-bottom: 1em;
+  float: left;
+}
+div.char-counter .counter {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  font-weight: bold;
+  color: #053472;
+}
+div.char-counter .exceeded {
+  color: #8a1f11;
 }
 div.error,
 div.alert,
