--- a/GCR.Web/Views/Shared/_AdminLayout.cshtml
+++ b/GCR.Web/Views/Shared/_AdminLayout.cshtml
@@ -9,8 +9,8 @@
                 <li><h4>@Html.ActionLink("Members", "Admin", "Member")</h4></li>
                 <li><h4>@Html.ActionLink("Schedule", "Admin", "Member")</h4></li>
                 <li><h4>@Html.ActionLink("Seasons", "Admin", "Member")</h4></li>
-                <li><h4>@Html.ActionLink("Home Page", "Admin", "Member")</h4></li>
-                <li><h4>@Html.ActionLink("Photos", "Admin", "Member")</h4></li>
+                <li><h4>@Html.ActionLink("Home Page", "Admin", "HomePagePhoto")</h4></li>
+                <li><h4>@Html.ActionLink("Teams", "Admin", "Member")</h4></li>
             </ul>
         </div>
         <div class="seventeen columns offset-by-one omega">
