--- a/GCR.Web/Views/Shared/_SimpleLayout.cshtml
+++ b/GCR.Web/Views/Shared/_SimpleLayout.cshtml
@@ -55,7 +55,7 @@
 	</div>
 	<div id="footer">
 		<div id="footer-inner">
-					<div>&copy; @DateTime.Now.Year - Gopher College Rugby} </div>
+					<div>&copy; @DateTime.Now.Year - Gopher College Rugby</div>
 		</div>
 
 	</div>
