--- a/GCR.Web/Views/News/CreateEdit.cshtml
+++ b/GCR.Web/Views/News/CreateEdit.cshtml
@@ -14,31 +14,31 @@
         </div>
     </div>
     <div class="one row" style="position:relative">
-        <div class="three columns alpha editor-label">
+        <div class="two columns alpha editor-label">
             @Html.LabelFor(model => model.Title)
         </div>
-        <div class="fourteen columns omega editor-field">
-            @Html.EditorFor(model => model.Title, new { htmlAttributes = new {style = "width:400px"}})
+        <div class="fifteen columns omega editor-field">
+            @Html.EditorFor(model => model.Title, new { htmlAttributes = new {style = "width:450px"}})
         </div>
     </div>
-    <div class="one row">
-        <div class="three columns alpha editor-label">
+    <div class="one row" style="margin-bottom:1em">
+        <div class="two columns alpha editor-label">
             @Html.LabelFor(model => model.Summary)
         </div>
-        <div class="fourteen columns omega editor-field">
-            @Html.TextAreaFor(model => model.Summary, new {style = "height:80px;width:400px"})
+        <div class="fifteen columns omega editor-field">
+            @Html.TextAreaFor(model => model.Summary, new {style = "height:70px;width:450px"})
         </div>
     </div>
     <div class="one row">
-        <div class="three columns alpha editor-label">
+        <div class="two columns alpha editor-label">
             @Html.LabelFor(model => model.Article)
         </div>
-        <div class="fourteen columns omega editor-field">
-            @Html.TextAreaFor(model => model.Article, new {style = "width:99%"})
+        <div class="fifteen columns omega editor-field">
+            @Html.TextAreaFor(model => model.Article)
         </div>
     </div>
     <div class="one row">
-        <div class="fourteen columns omega offset-by-three editor-field">
+        <div class="fifteen columns omega offset-by-two editor-field">
             <input type="submit" value="Save" style="padding-left:1.4em; padding-right:1.4em" />&nbsp;&nbsp;
                 @Html.ActionLink("Back to List", "Admin", null, new { @class = "button" })
         </div>
@@ -49,7 +49,9 @@
     <script src="~/Scripts/ckeditor/ckeditor.js"></script>
     <script type="text/javascript">
         $(function () {
-            CKEDITOR.replace('Article');
+            CKEDITOR.replace('Article', {
+                height: "250"
+            });
             $("#Summary").charCount();
         });
     </script>
